--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.12.7",
     "codelyzer": "^5.1.0",
+    "comment-json": "^2.3.1",
     "cpy-cli": "^2.0.0",
     "husky": "^1.3.1",
     "intershop-schematics": "file:schematics/src",
@@ -126,6 +127,7 @@
     "treeify": "^1.1.0",
     "ts-loader": "^5.2.0",
     "ts-mockito": "2.5.0",
+    "ts-morph": "^6.0.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.20.0",
     "tslint-clean-code": "^0.2.10",
